Fix spacing issues with mobile
This removes the extra space an empty card creates on the mobile. NOTE: This will be refactored to TailwindCSS when the rest of the card CSS is refactored.

--- a/source/default/_patterns/00-protons/legacy/css/components/card/_card.css
+++ b/source/default/_patterns/00-protons/legacy/css/components/card/_card.css
@@ -16,6 +16,12 @@ in particle */
   }
 }
 
+@media (max-width: 640px) {
+  .utc-card-grid__container {
+    margin-bottom: 0px !important;
+  }
+}
+
 .utc-card-2 {
   position: relative;
   box-sizing: border-box;
